@@ -10,3 +10,4 @@ Max M. Schneider
 Niklas Blagojevic
 Gaoyuan Wang
 Colin-Marius Koch
+Leon Frangen
