@@ -3,12 +3,16 @@ Please add your contributions.
 
 v0.7.0 not-yet-released
 
+
 v0.6.2 not-yet-released
 
 	* fix problem with exact area51 genration
 	of polymers and its test.        MM and LS
 	* enable extra SOMA_C_FLAGS as
 	environment added to C_FLAGS	LS
+	* fix problem with calculation of the 
+	bond-anisotropy for closed chains, while 
+	using minimum image convention.	Leon Frangen
 
 v0.6.1 23/1/19
 	* fix a problem with memory management for
